[gd_scene load_steps=16 format=4 uid="uid://00ago5m33nym"]

[ext_resource type="Script" path="res://mainScene/main.gd" id="1_g404o"]
[ext_resource type="PackedScene" uid="uid://bv3smscm5bpsa" path="res://mob/mob.tscn" id="2_dlbg0"]
[ext_resource type="PackedScene" uid="uid://5qwkybn13p74" path="res://projectile_2.tscn" id="3_bux4m"]
[ext_resource type="PackedScene" uid="uid://i4tgixgnogga" path="res://hud/hud.tscn" id="4_k2am7"]
[ext_resource type="PackedScene" uid="uid://dam5fp7qa7qjs" path="res://pickup.tscn" id="4_pv7v5"]
[ext_resource type="PackedScene" uid="uid://beagqcu70fdyw" path="res://newPlayer/character_body_2d.tscn" id="5_j2m48"]
[ext_resource type="PackedScene" uid="uid://ckcbv6nyn23cj" path="res://mainScene/static_body_2d.tscn" id="5_ywqbw"]
[ext_resource type="AudioStream" uid="uid://bks2eoe3u84c3" path="res://art/gameover.wav" id="8_gggmv"]
[ext_resource type="Texture2D" uid="uid://bigewdsdri32p" path="res://art/ice.png" id="9_q0ffk"]
[ext_resource type="Script" path="res://miscSingletons/stats.gd" id="10_0pyac"]

[sub_resource type="Curve2D" id="Curve2D_k06y5"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 109, -2, 0, 0, 0, 0, 640, 0.658596, 0, 0, 0, 0, 640, 0.658596, 0, 0, 0, 0, 1920, -2, 0, 0, 0, 0, 1920, 400, 0, 0, 0, 0, 1920, 1096, 0, 0, 0, 0, 970.667, 1096, 0, 0, 0, 0, 960, 1096, 0, 0, 0, 0, 0, 1096, 0, 0, 0, 0, 0, 0)
}
point_count = 11

[sub_resource type="ViewportTexture" id="ViewportTexture_26x7o"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_eoqqh"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_s6vof"]
texture = ExtResource("9_q0ffk")
texture_region_size = Vector2i(32, 32)
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-14.9818, -15.1144, 15.0702, -15.1144, 15.0702, 15.026, -14.9818, 15.1144)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -15.0702, 16, -14.9818, 16, 15.0702, -16, 14.9818)

[sub_resource type="TileSet" id="TileSet_7flge"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 239
physics_layer_0/collision_mask = 239
physics_layer_0/physics_material = SubResource("PhysicsMaterial_eoqqh")
terrain_set_0/mode = 0
terrain_set_0/terrain_0/name = "Ice"
terrain_set_0/terrain_0/color = Color(0.456752, 0.718952, 1, 1)
sources/0 = SubResource("TileSetAtlasSource_s6vof")

[node name="Main" type="Node"]
script = ExtResource("1_g404o")
mob_scene = ExtResource("2_dlbg0")
projectile2_scene = ExtResource("3_bux4m")
pickup_scene = ExtResource("4_pv7v5")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.612777, 0.544698, 1, 1)

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(720, 405)

[node name="MobPath" type="Path2D" parent="."]
position = Vector2(0, 1.47177)
scale = Vector2(0.75, 0.735883)
curve = SubResource("Curve2D_k06y5")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
rotation = -0.0183466

[node name="HUD" parent="." instance=ExtResource("4_k2am7")]

[node name="PhysicsPlayer" parent="." instance=ExtResource("5_j2m48")]
position = Vector2(720, 400)

[node name="Ceiling" parent="." instance=ExtResource("5_ywqbw")]

[node name="Floor" parent="." instance=ExtResource("5_ywqbw")]

[node name="LeftWall" parent="." instance=ExtResource("5_ywqbw")]

[node name="RightWall" parent="." instance=ExtResource("5_ywqbw")]

[node name="PointLight2D" type="PointLight2D" parent="."]
texture = SubResource("ViewportTexture_26x7o")

[node name="ShotTimer" type="Timer" parent="."]
wait_time = 0.355

[node name="PickupTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_gggmv")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
scale = Vector2(3, 3)
tile_map_data = PackedByteArray("AAAGAAIAAAABAAEAAAAHAAIAAAABAAEAAAAIAAIAAAABAAEAAAADAAMAAAAAAAEAAAACAAUAAAAAAAEAAAALAAMAAAAAAAEAAAAMAAUAAAAAAAEAAAAGAAYAAAABAAEAAAAHAAYAAAABAAEAAAAIAAYAAAABAAEAAAA=")
tile_set = SubResource("TileSet_7flge")

[node name="Node" type="Node" parent="."]
script = ExtResource("10_0pyac")

[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="hit" from="PhysicsPlayer" to="." method="game_over"]
[connection signal="timeout" from="ShotTimer" to="." method="_on_shot_timer_timeout"]
[connection signal="timeout" from="PickupTimer" to="." method="_on_item_timer_timeout"]
